--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
   <!-- Android Studio says the versionCode is always overwritten by the value in the gradle build script -->
   <!-- android:versionCode="1" -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.glandorf1.joe.wsprnetviewer.app"
+    package="com.mentisavis.wsprnetviewer.app"
     android:versionName="0.1"
     >
 
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.glandorf1.joe.wsprnetviewer.app.MainActivity"
+            android:name="com.mentisavis.wsprnetviewer.app.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/WsprTheme" >
             <intent-filter>
@@ -30,20 +30,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.glandorf1.joe.wsprnetviewer.app.DetailActivity"
+            android:name="com.mentisavis.wsprnetviewer.app.DetailActivity"
             android:label="@string/title_activity_detail" >
-            android:parentActivityName="com.glandorf1.joe.wsprnetviewer.app.MainActivity" >
+            android:parentActivityName="com.mentisavis.wsprnetviewer.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.glandorf1.joe.wsprnetviewer.app.MainActivity" />
+                android:value="com.mentisavis.wsprnetviewer.app.MainActivity" />
         </activity>
         <activity
-            android:name="com.glandorf1.joe.wsprnetviewer.app.SettingsActivity"
+            android:name="com.mentisavis.wsprnetviewer.app.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.glandorf1.joe.wsprnetviewer.app.MainActivity" >
+            android:parentActivityName="com.mentisavis.wsprnetviewer.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.glandorf1.joe.wsprnetviewer.app.MainActivity" />
+                android:value="com.mentisavis.wsprnetviewer.app.MainActivity" />
         </activity>
         <provider
             android:authorities="@string/content_authority"
