--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <!-- Android Studio says the versionCode is always overwritten by the value in the gradle build script -->
-  <!-- android:versionCode="1" -->
+  <!-- Android Studio says the versionCode and is always overwritten by the value
+       in the gradle build script.  See app/buil.gradle. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mentisavis.wsprnetviewer.app"
-    android:versionName="0.1"
+    package="com.glandorf1.joe.wsprnetviewer.app"
+    android:versionCode="2"
+    android:versionName="0.11"
     >
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -21,7 +22,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.mentisavis.wsprnetviewer.app.MainActivity"
+            android:name="com.glandorf1.joe.wsprnetviewer.app.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/WsprTheme" >
             <intent-filter>
@@ -30,20 +31,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.mentisavis.wsprnetviewer.app.DetailActivity"
+            android:name="com.glandorf1.joe.wsprnetviewer.app.DetailActivity"
             android:label="@string/title_activity_detail" >
-            android:parentActivityName="com.mentisavis.wsprnetviewer.app.MainActivity" >
+            android:parentActivityName="com.glandorf1.joe.wsprnetviewer.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mentisavis.wsprnetviewer.app.MainActivity" />
+                android:value="com.glandorf1.joe.wsprnetviewer.app.MainActivity" />
         </activity>
         <activity
-            android:name="com.mentisavis.wsprnetviewer.app.SettingsActivity"
+            android:name="com.glandorf1.joe.wsprnetviewer.app.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.mentisavis.wsprnetviewer.app.MainActivity" >
+            android:parentActivityName="com.glandorf1.joe.wsprnetviewer.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mentisavis.wsprnetviewer.app.MainActivity" />
+                android:value="com.glandorf1.joe.wsprnetviewer.app.MainActivity" />
         </activity>
         <provider
             android:authorities="@string/content_authority"
