--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
        in the gradle build script.  See app/buil.gradle. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.glandorf1.joe.wsprnetviewer.app"
-    android:versionCode="4"
-    android:versionName="0.13"
+    android:versionCode="5"
+    android:versionName="0.14"
     >
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <!-- If we enable dump-to-SD-card, WRITE_EXTERNAL_STORAGE will need to be set. -->
     <!-- TODO: determine if we can check for WRITE_EXTERNAL_STORAGE permission at compile/runtime. -->
-    <!-- uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
