--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'org.jmockit:jmockit:1.13'
     compile project(':multiSelectListPreferenceCompat')
     compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.android.support:gridlayout-v7:19.+'
     compile 'com.android.support:support-v4:19.+'
     compile 'com.google.android.gms:play-services:6.1.71'
     compile 'com.google.maps.android:android-maps-utils:0.3.+'
