Removed wide/large-format layouts for now.  For larger screens, will need to rework how the side-by-side WSPR/details layout is accomplished. Refactored WsprNetViewerSyncAdaper.java to reduce cyclomatic count.  Removed remaining code related to reading WSPR data from a canned file or built-in data. Altered max number of 'toasts' in PropagationMapsFragment.java. Changed version to 0.17beta3, versionCode 10.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.glandorf1.joe.wsprnetviewer.app"
-    android:versionCode="9"
-    android:versionName="0.17beta2" >
+    android:versionCode="10"
+    android:versionName="0.17beta3" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
@@ -25,6 +25,10 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- Maps API needs OpenGL ES 2.0. -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
