--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 10
         targetSdkVersion 19
         versionCode 11
-        versionName "0.17beta4"
+        versionName "0.17"
     }
     buildTypes {
         release {
